force-app/main/default/objects/Lumeris__c/Lumeris__c.object-meta.xml
<CustomObject>
    <description>Field Types in class</description>
    <label>Lumeris</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Lumeris Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lumeris</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>