force-app/main/default/objects/Lumeris__c/fields/CheckBox__c.field-meta.xml
<CustomField>
    <fullName>CheckBox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is part of the learning session.</description>
    <inlineHelpText>New Checkbox to capture the data.</inlineHelpText>
    <label>CheckBox</label>
    <type>Checkbox</type>
</CustomField>