force-app/main/default/objects/Lumeris__c/fields/Encrypted_Field__c.field-meta.xml
<CustomField>
    <fullName>Encrypted_Field__c</fullName>
    <label>Encrypted Field</label>
    <length>20</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>