force-app/main/default/objects/Lumeris__c/fields/Integer__c.field-meta.xml
<CustomField>
    <fullName>Integer__c</fullName>
    <label>Integer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>