force-app/main/default/objects/Lumeris__c/fields/Multiselect__c.field-meta.xml
<CustomField>
    <fullName>Multiselect__c</fullName>
    <label>Multiselect</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Java</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
            <value>
                <fullName>PHP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>