force-app/main/default/objects/Lumeris__c/fields/Picklist__c.field-meta.xml
<CustomField>
    <fullName>Picklist__c</fullName>
    <label>Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boston</fullName>
                <default>true</default>
                <label>Boston</label>
            </value>
            <value>
                <fullName>Losangelos</fullName>
            </value>
            <value>
                <fullName>Michigan</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>