force-app/main/default/objects/Lumeris__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <label>Text</label>
    <length>100</length>
    <type>Text</type>
</CustomField>