force-app/main/default/objects/Lumeris__c/fields/Value_of_A__c.field-meta.xml
<CustomField>
    <fullName>Value_of_A__c</fullName>
    <label>Value of A</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>