force-app/main/default/objects/Lumeris__c/fields/Value_of_Two_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Value_of_Two_Numbers__c</fullName>
    <formula>(Value_of_A__c  +  Value_of_B__c) *  Value_of_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Value of two fields is shown below.</inlineHelpText>
    <label>Value of Two Numbers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>