force-app/main/default/objects/Lumeris__c/recordTypes/Parnters.recordType-meta.xml
<RecordType>
    <fullName>Parnters</fullName>
    <active>true</active>
    <label>Parnters</label>
</RecordType>